tests/NormalTests/paczka1/fuzzy1/20308559.err
Error in line 7: BEzY A805 7,3
Error in line 11: 6an60TSq S580 40,2
Error in line 16: 6an60TSq A805 13,4
Error in line 21: WVhzzUg S580 15,5
Error in line 31: p9ea8Ca2 A963 13,3
Error in line 33: 39Ey A963 71,5
